crates/bitnet-kernels/tests/snapshots/snapshot_wave23__precision_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 321
expression: variants
---
[
    F32,
    F16,
    BF16,
    I8,
    I4,
    I2,
]
