crates/bitnet-kernels/tests/snapshots/snapshot_wave23__precision_policy_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 346
expression: policy
---
PrecisionPolicy {
    default_precision: F32,
    overrides: [
        (
            Attention,
            F16,
        ),
        (
            FeedForward,
            I8,
        ),
        (
            Embedding,
            F16,
        ),
    ],
}
