crates/bitnet-kernels/tests/snapshots/snapshot_wave23__precision_policy_uniform.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 352
expression: policy
---
PrecisionPolicy {
    default_precision: F16,
    overrides: [],
}
