crates/bitnet-kernels/tests/snapshots/snapshot_wave23__prefix_eviction_policy.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 241
expression: policy
---
Lru
