crates/bitnet-kernels/tests/snapshots/snapshot_wave23__prefix_shared_kv_ref.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 247
expression: kv_ref
---
SharedKvRef {
    entry_id: 42,
    token_len: 128,
}
