crates/bitnet-kernels/tests/snapshots/snapshot_wave23__prefix_stats_empty_tree.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 260
expression: tree.stats()
---
PrefixStats {
    hits: 0,
    lookups: 0,
    tokens_saved: 0,
    memory_used: 0,
    pinned_entries: 0,
}
