crates/bitnet-kernels/tests/snapshots/snapshot_wave23__prefix_system_prompt_pin.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 253
expression: pin
---
SystemPromptPin {
    tokens: [
        1,
        2,
        3,
        128000,
    ],
    entry_id: 0,
}
