crates/bitnet-kernels/tests/snapshots/snapshot_wave23__reduce_config_axis_keepdims.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 513
expression: cfg
---
ReduceConfig {
    op: Mean,
    axis: Some(
        1,
    ),
    keepdims: true,
    dtype: F16,
}
