crates/bitnet-kernels/tests/snapshots/snapshot_wave23__reduce_config_global_sum.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 504
expression: cfg
---
ReduceConfig {
    op: Sum,
    axis: None,
    keepdims: false,
    dtype: F32,
}
