crates/bitnet-kernels/tests/snapshots/snapshot_wave23__reduce_dtype_all_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave23.rs
assertion_line: 498
expression: dtypes
---
[
    F32,
    F16,
    I32,
]
